@@ -1,3 +1,8 @@
+2005-09-17 Jens Tkotz <jens@peino.de> 1.5.1-RC4-cvs-b11
+
+	* "Fix": Cach invalid input for $page and set_albumListPage in view_album.php and stats.php
+	Found by Andrew Khlebutin
+
 2005-09-17 Jens Tkotz <jens@peino.de> 1.5.1-RC4-cvs-b10
 
 	* Fix: fs_opendir leaks resources.
